--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JMc – Jason McLaren | Designer + Developer</title>
-
+    <meta http-equiv="Content-Type" content="text/html"  charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Designer and Developer from Australia Jason McLaren.">
+    <title>JMc – Jason McLaren | Designer + Developer | Australia</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
