--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Designer and Developer from Australia Jason McLaren.">
     <title>JMc – Jason McLaren | Designer + Developer | Australia</title>
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119750582-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-119750582-1');
+    </script>
 </head>
 <body>
 
