--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-119750582-1');
+        let host = window.location.hostname||'error:nohostname';
+        gtag('event', `loaded on ${host}`, {
+            'event_category': host,
+            'event_label': `loaded on ${host}`,
+            'value': host
+        });
     </script>
 </head>
 <body>
